--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
   </head>
   <body background="assets/images/dark-honeycomb.png">
         <div class="pos-f-t">
-                <div class="collapse" id="navbarToggleExternalContent">
-                  <div class="bg-dark p-4">
-                    <h5 class="text-white h4"><a href="index.html"> About -</a><a href="portfolio.html"> Portfolio -</a><a href="contact.html"> Contact </a></h5>
-                    <span class="text-muted">Click to explore!</span>
-                  </div>
-                </div>
-                <nav class="navbar navbar-dark bg-dark">
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                </nav>
-              </div>
+            <div class="collapse" id="navbarToggleExternalContent">
+                <div class="bg-dark p-4">
+                 <h5 class="text-white h4"><a href="index.html"> About -</a><a href="portfolio.html"> Portfolio -</a><a href="contact.html"> Contact </a></h5>
+                <span class="text-muted">Click to explore!</span>
+                 </div>
+            </div>
+            <nav class="navbar navbar-dark bg-dark">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+            </nav>
+        </div>
 
-              <div id="border"></id>
+            <div id="border"></id>
                 <div class="name"><h1>Ismael Rivera.</h1>
                     </div>
-                    <div class="container">
-                            <h1>About me</h1>
-                                <div class="row">
-                                  <div class="col-sm">
-                                        <img src="assets/images/elMorro.jpg" class="img-fluid" alt="Responsive image">
-                                  </div>
-                                  <div class="col-sm">Ismael Rivera is a hard working professional. He graduated from Eustis High School, and studied mechanical enginnering, for a short amount of time until having to commit to a full time job instead.
+                <div class="container">
+                    <h1>About me</h1>
+                        <div class="row">
+                             <div class="col-sm">
+                                    <img src="image/elMorro.jpg" class="img-fluid" alt="Responsive image">
+                                </div>
+                                <div class="col-sm">Ismael Rivera is a hard working professional. He graduated from Eustis High School, and studied mechanical enginnering, for a short amount of time until having to commit to a full time job instead.
                                         Since then he has spent the past 15 years in the hospitality industry, he currently is a lead chef at a fine dining restuarant in a historic downtown location, right on the water.
                                                     
                                        His interests consist of traveling, new experiences, volenteer work, and learning something new everyday.
@@ -42,12 +42,12 @@
                                             <br>
                                            which is a program that helps the charity group called "Combat Veterans to Carreers"
                                             which was founded in The Villages in May 2012 with the commitment to serve our nations combat Vets and their families
-                                             in the areas of education, employment, housing, and wellness.
-                                       </p>
-                                       <div class="push"></div>
-                                        
-                                  </div>
-                                  <div id="footer"> Copyright &#169;
+                                            in the areas of education, employment, housing, and wellness.</p>
+                                </div>
+                        </div>
+                        <div class="push"></div>                                       
+                </div>
+                <div id="footer"> Copyright &#169;
 
 
     <!-- Optional JavaScript -->
