--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,8 @@
                           <a class="dropdown-item" href="../Project-1-/index.html">Git Grub!-project-1.</a>
                           <a class="dropdown-item" href="../Psychic-Game/index.html">Psychic game.</a>
                           <a class="dropdown-item" href="../unit-4-game/index.html">Guess the Crystals game.</a>
+                          <a class="dropdown-item" href="https://github.com/IsmaelRvra130/-liri-node-app">Liri-node-bot.</a>
+                          
                         </div>
                       </div>
                   </div>
