--- a/portfolio.html
+++ b/portfolio.html
@@ -27,6 +27,7 @@
                           <a class="dropdown-item" href="../Psychic-Game/index.html">Psychic game.</a>
                           <a class="dropdown-item" href="../unit-4-game/index.html">Guess the Crystals game.</a>
                           <a class="dropdown-item" href="https://github.com/IsmaelRvra130/-liri-node-app">Liri-node-bot.</a>
+                          <a class="dropdown-item" href="https://github.com/IsmaelRvra130/bamazon-">BAMazon-node.js/mysql app.</a>
                           
                         </div>
                       </div>
