updated with friend finder app

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,7 @@
                           <a class="dropdown-item" href="../unit-4-game/index.html">Guess the Crystals game.</a>
                           <a class="dropdown-item" href="https://github.com/IsmaelRvra130/-liri-node-app">Liri-node-bot.</a>
                           <a class="dropdown-item" href="https://github.com/IsmaelRvra130/bamazon-">BAMazon-node.js/mysql app.</a>
+                          <a class="dropdown-item" href="app/public/home.html">Friend Finder-Matching app.</a>
                           
                         </div>
                       </div>
