--- a/index.html
+++ b/index.html
@@ -74,23 +74,17 @@
                     <img src="image/elMorro.jpg" class="img-fluid" alt="Responsive image">
                 </div>
                 <div class="col-sm-6 animated rollIn delay-2s">
-                    <p>Ismael Rivera is a hard working professional. He graduated from Eustis High School, and studied
-                        mechanical enginnering, for a short amount of time until having to commit to a full time job
-                        instead.
-                        Since then he has spent the past 15 years in the hospitality industry, he currently is a lead
-                        chef at a fine dining restuarant in a historic downtown location, right on the water.
+                    <p>Ismael Rivera is a hard working individual, looking to perform at a high level with a professional organization.<br><br>
+                        Recently having completed the University of Central Florida's coding bootcamp course,
+                        he's familiar with many up to date technologies,languages,and libraries 
+                        in order to be competitive with the latest technological trends, constructing unique and memorable applications
+                        for our users interaction.<br><br>
 
-                        His interests consist of traveling, new experiences, volenteer work, and learning something new
-                        everyday.
-
-
-                        Ismael has been to multiple countrys, been immersed in diffrent cultures, and also volenteers
-                        annually for an organization called "Cooking with Vodka!"
-                        <br>
-                        which is a program that helps the charity group called "Combat Veterans to Carreers"
-                        which was founded in The Villages in May 2012 with the commitment to serve our nations combat
-                        Vets and their families
-                        in the areas of education, employment, housing, and wellness.</p>
+                        Eager and confident to excel in a new career, but always exploring to learn more!<br><br>
+                        With the discipline and fast pace of the UCF coding bootcamp that I attended, 
+                        the knowledge of a new tech language or library can be quickly
+                         attained, executed, and taught to other team members!<br><br>
+                        If your ready for a hungry, humble, and positive team player to join your team, please<a href="contact.html"> contact me!</a>
 
                 </div>
             </div>
