updated for LinkedIn

--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,7 @@
               href="https://github.com/IsmaelRvra130/burger">Eat-da-burger-node.js/mysql/express.js/handlebars</a>
             <a class="dropdown-item" href="">Eat-da-burger-Sequelized</a>
             <a class="dropdown-item" href="">Friendly Neighbor App. Project2</a>
+            <a class="dropdown-item" href="https://click-game-react-19.herokuapp.com/">REACT.JS Avengers game!</a>
           </div>
         </li>
       </ul>
@@ -76,65 +77,21 @@
           <br>
           <div class="sb"></div><br>
 
-          <div id="fd">
-            <!--Button trigger modal-->
-            <button type="button" class="btn btn-info animated rotateInUpRight delay-2s" data-toggle="modal"
-              data-target="#exampleModalCenter">
-              Message me<br>
-            </button><br><br>
-
+          <div id="fd"></div>
+          
             <div class="container">
-              <div class="row animated bounce delay-3s">
-                <div class="col-sm"><a href="https://www.facebook.com/" class="fab fa-facebook"></i><br><br></a></div>
-                <div class="col-sm"><a href="https://github.com/IsmaelRvra130" class="fab fa-github"></i><br></a><br>
+                <p1>Email:</p1> <a href="https://gmail.com">I.RVRA130@gmail.com</a></div>
+                <p1>Phone Number: (352) 973-8688</p1><br><br>
+              <div class="row animated bounce delay-3s"><br>
+                <div class="col-sm"><a href="https://github.com/IsmaelRvra130" class="fab fa-github"></i></a>
                 </div>
+                <div class="col-sm"><a href="https://twitter.com/RocketIsmael13" class="fab fa-twitter"></i></a>
+              </div>
+              <div class="col-sm"><a href="https://www.linkedin.com/in/ismael-rivera-46987018a/"  class="fab fa-linkedin"></i></a>
               </div>
               <div class="row animated bounceInUp delay-4s">
-                <div class="col-sm"><a href="https://www.instagram.com/rocketish13/?hl=en"
-                    class="fab fa-instagram"></i><br></a><br></div>
-                <div class="col-sm"><a href="https://twitter.com/RocketIsmael13" class="fab fa-twitter"></i><br></a><br>
-                </div>
-              </div>
-            </div>
-
-            <!-- Modal -->
-            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-              aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-              <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                  <div class="modal-body">
-
-                    <!--Contact form start-->
-
-                    <form>
-                      <div class="form-group">
-                        <label for="exampleFormControlInput1">Full Name</label>
-                        <input type="text" class="form-control" id="input-name" placeholder="Name">
-                      </div>
-                      <div class="form-group">
-                        <label for="exampleFormControlSelect1">Email</label>
-                        <input type="email" class="form-control" id="input-email" placeholder="Email">
-                      </div>
-                      <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Message</label>
-                        <textarea class="form-control" id="input-message" rows="3" placeholder="Message"></textarea>
-                      </div>
-                    </form>
-
-                    <!--Contact form end-->
-
-
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Send</button>
-                  </div>
+                <div class="col-sm">
+                <div class="col-sm">
                 </div>
               </div>
             </div>
@@ -179,13 +136,12 @@
   </div>
 
 
-  <div id="footer"> Copyright &#169; <a href="https://github.com/IsmaelRvra130"
-      class="fab fa-github animated bounceInDown delay-2s "></i><br></a><a href=""
-      class="fab fa-facebook animated bounceInDown delay-3s"></i><br></a><a
-      href="https://www.instagram.com/rocketish13/?hl=en"
-      class="fab fa-instagram animated bounceInDown delay-4s"></i><br></a><a href="https://twitter.com/RocketIsmael13"
-      class="fab fa-twitter animated slideInUp delay-5s"></i><br></a><a href="https://dashboard.heroku.com/apps"
-      class="icons8-heroku animated rotateIn delay-5s"></a>
+  <div id="footer"> Copyright &#169;  Copyright &#169;<a href="https://github.com/IsmaelRvra130"
+    class="fab fa-github animated bounceInDown delay-2s "></i><br></a><a
+    href="https://twitter.com/RocketIsmael13"
+    class="fab fa-twitter animated slideInUp delay-5s"></i><br></a><a
+    href="https://dashboard.heroku.com/apps" class="icons8-heroku animated rotateIn delay-5s"></a>
+    <a href="https://www.linkedin.com/in/ismael-rivera-46987018a/"  class="fab fa-linkedin"></i></a>
     <div class="push"></div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
