--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                             href="https://github.com/IsmaelRvra130/burger">Eat-da-burger-node.js/mysql/express.js/handlebars</a>
                         <a class="dropdown-item" href="">Eat-da-burger-Sequelized</a>
                         <a class="dropdown-item" href="">Friendly Neighbor App. Project2</a>
+                        <a class="dropdown-item" href="https://click-game-react-19.herokuapp.com/">REACT.JS Avengers game!</a>
                     </div>
                 </li>
             </ul>
@@ -91,13 +92,11 @@
             <div class="push"></div>
         </div>
         <div id="footer"> Copyright &#169;<a href="https://github.com/IsmaelRvra130"
-                class="fab fa-github animated bounceInDown delay-2s "></i><br></a><a href=""
-                class="fab fa-facebook animated bounceInDown delay-3s"></i><br></a><a
-                href="https://www.instagram.com/rocketish13/?hl=en"
-                class="fab fa-instagram animated bounceInDown delay-4s"></i><br></a><a
+                class="fab fa-github animated bounceInDown delay-2s "></i><br></a><a
                 href="https://twitter.com/RocketIsmael13"
                 class="fab fa-twitter animated slideInUp delay-5s"></i><br></a><a
                 href="https://dashboard.heroku.com/apps" class="icons8-heroku animated rotateIn delay-5s"></a>
+                <a href="https://www.linkedin.com/in/ismael-rivera-46987018a/"  class="fab fa-linkedin"></i></a>
 
 
             <!-- Optional JavaScript -->
