--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,7 @@
             <a class="dropdown-item" href=" https://eat-da-burger-unit14.herokuapp.com/">Eat-da-burger-Sequelized</a>
             <a class="dropdown-item" href="https://project2friendlyneighbor.herokuapp.com/">Friendly Neighbor App.
               Project2</a>
+              <a class="dropdown-item" href="https://click-game-react-19.herokuapp.com/">REACT.JS Avengers game!</a>
           </div>
         </li>
       </ul>
@@ -110,13 +111,12 @@
 
 
   </div>
-  <div id="footer"> Copyright &#169;<a href="https://github.com/IsmaelRvra130"
-      class="fab fa-github animated bounceInDown delay-2s "></i><br></a><a href=""
-      class="fab fa-facebook animated bounceInDown delay-3s"></i><br></a><a
-      href="https://www.instagram.com/rocketish13/?hl=en"
-      class="fab fa-instagram animated bounceInDown delay-4s"></i><br></a><a href="https://twitter.com/RocketIsmael13"
-      class="fab fa-twitter animated slideInUp delay-5s"></i><br></a><a href="https://dashboard.heroku.com/apps"
-      class="icons8-heroku animated rotateIn delay-5s"></a>
+  <div id="footer">  Copyright &#169;<a href="https://github.com/IsmaelRvra130"
+    class="fab fa-github animated bounceInDown delay-2s "></i><br></a><a
+    href="https://twitter.com/RocketIsmael13"
+    class="fab fa-twitter animated slideInUp delay-5s"></i><br></a><a
+    href="https://dashboard.heroku.com/apps" class="icons8-heroku animated rotateIn delay-5s"></a>
+    <a href="https://www.linkedin.com/in/ismael-rivera-46987018a/"  class="fab fa-linkedin"></i></a>
     <div class="push"></div>
   </div>
 
