updated Mediaqueries/workin on sm device

--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,10 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <!-- <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
-            </button> -->
+            </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
@@ -83,11 +83,11 @@
                 <p1>Email:</p1> <a href="https://gmail.com">I.RVRA130@gmail.com</a></div>
                 <p1>Phone Number: (352) 973-8688</p1><br><br>
               <div class="row animated bounce delay-3s"><br>
-                <div class="col-sm"><a href="https://github.com/IsmaelRvra130" class="fab fa-github"></i></a>
+                <div class="col-sm"><a href="https://github.com/IsmaelRvra130" class="fab fa-github" id=fab1></i></a>
                 </div>
-                <div class="col-sm"><a href="https://twitter.com/RocketIsmael13" class="fab fa-twitter"></i></a>
+                <div class="col-sm"><a href="https://twitter.com/RocketIsmael13" class="fab fa-twitter" id=fab2></i></a>
               </div>
-              <div class="col-sm"><a href="https://www.linkedin.com/in/ismael-rivera-46987018a/"  class="fab fa-linkedin"></i></a>
+              <div class="col-sm"><a href="https://www.linkedin.com/in/ismael-rivera-46987018a/"  class="fab fa-linkedin" id=fab3></i></a>
               </div>
               <div class="row animated bounceInUp delay-4s">
                 <div class="col-sm">
