--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <!-- <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
-                </button> -->
+                </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -33,7 +33,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact </a>
                 </li>
-                <li class="nav-item dropdown">
+                <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         My Creations
@@ -56,7 +56,7 @@
                         <a class="dropdown-item" href="">Friendly Neighbor App. Project2</a>
                         <a class="dropdown-item" href="https://click-game-react-19.herokuapp.com/">REACT.JS Avengers game!</a>
                     </div>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
