--- a/portfolio.html
+++ b/portfolio.html
@@ -60,16 +60,16 @@
 
     <!--End of dropdown-->
     <div class="name animated bounceInRight">
-      <h1>Ismael Rivera.</h1>
+      <h3>Ismael Rivera.</h3>
     </div>
   </div>
 
   <div class="container">
     <div class="port">
-      <h1>Portfolio</h1>
+      <h3>Portfolio</h3>
     </div>
-    <div class="container">
-      <div class="row animated rollIn delay-1s">
+    <div class="container1">
+      <!-- <div class="row animated rollIn delay-1s"> -->
         <div class="col-sm">
           <a href="../TriviaGame/index.html"><img src="./image/GOT gif.gif" height="220px" class="img1"
               width="300px"></a>
@@ -88,8 +88,8 @@
       </div>
     </div>
     <br>
-    <div class="container">
-      <div class="row animated bounceInRight delay-2s">
+    <div class="container2">
+      <!-- <div class="row animated bounceInRight delay-2s"> -->
         <div class="col-sm">
           <a href="../Project-1-/index.html"><img src="./image/GitGrub.gif" height="220px" class="img1"
               width="300px"></a>
