completed responsive mediaQueries

--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
         <div id="main2">
           <br>
           <div class="cont">
-            <h2>Contact</h2>
+            <h3>Contact:</h3>
           </div>
           <br>
           <div class="sb"></div><br>
@@ -105,7 +105,7 @@
       <div class="col-md animated rotateIn delay-2s">
         <div id="mainlang">
           <div class="lang">
-            <h2>Familiar languages and libraries</h2>
+            <h3>Languages and libraries:</h3>
           </div>
           <br>
           <div class="sb2"></div><br>
@@ -118,7 +118,7 @@
               <div class="col-sm-1"><img src="./image/firebase.png" height="100px" width="100px" class="firedb"></div>
               <div class="col-sm-1"><img src="./image/API.png" height="100px" width="100px" class="api"></div>
               <div class="col-sm-1"><img src="./image/expressjs.png" height="100px" width="100px" class="exp"></div>
-              <div class="w-100"></div><br>
+              <div class="w-100"></div>
               <div class="col-sm-1"><img src="./image/node.jpg" height="100px" width="100px" class="html"></div>
               <div class="col-sm-1"><img src="./image/handlebars.png" height="100px" width="100px" class="css"></div>
               <div class="col-sm-1"><img src="./image/momentjs.png" height="100px" width="100px" class="jquery"></div>
@@ -136,11 +136,11 @@
   </div>
 
 
-  <div id="footer"> Copyright &#169;  Copyright &#169;<a href="https://github.com/IsmaelRvra130"
+  <div id="footer">Copyright &#169;<a href="https://github.com/IsmaelRvra130"
     class="fab fa-github animated bounceInDown delay-2s "></i><br></a><a
     href="https://twitter.com/RocketIsmael13"
-    class="fab fa-twitter animated slideInUp delay-5s"></i><br></a><a
-    href="https://dashboard.heroku.com/apps" class="icons8-heroku animated rotateIn delay-5s"></a>
+    class="fab fa-twitter animated bounceInDown delay-4s"></i><br></a><a
+    href="https://dashboard.heroku.com/apps" class="icons8-heroku animated rotateIn delay-4s"></a>
     <a href="https://www.linkedin.com/in/ismael-rivera-46987018a/"  class="fab fa-linkedin"></i></a>
     <div class="push"></div>
   </div>
