--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         </div>
         <div class="container">
-            <h1>About me</h1>
+            <h4>About me</h4>
             <div class="row">
 
                 <div class="col-sm-6 animated rotateIn delay-1s">
@@ -94,8 +94,8 @@
         <div id="footer"> Copyright &#169;<a href="https://github.com/IsmaelRvra130"
                 class="fab fa-github animated bounceInDown delay-2s "></i><br></a><a
                 href="https://twitter.com/RocketIsmael13"
-                class="fab fa-twitter animated slideInUp delay-5s"></i><br></a><a
-                href="https://dashboard.heroku.com/apps" class="icons8-heroku animated rotateIn delay-5s"></a>
+                class="fab fa-twitter animated bounceInDown delay-4s"></i><br></a><a
+                href="https://dashboard.heroku.com/apps" class="icons8-heroku animated rotateIn delay-4s"></a>
                 <a href="https://www.linkedin.com/in/ismael-rivera-46987018a/"  class="fab fa-linkedin"></i></a>
 
 
