--- a/portfolio.html
+++ b/portfolio.html
@@ -66,10 +66,10 @@
 
   <div class="container">
     <div class="port">
-      <h3>Portfolio</h3>
+      <h4>Portfolio</h4>
     </div>
     <div class="container1">
-      <!-- <div class="row animated rollIn delay-1s"> -->
+      <div class="row animated rollIn delay-1s">
         <div class="col-sm">
           <a href="../TriviaGame/index.html"><img src="./image/GOT gif.gif" height="220px" class="img1"
               width="300px"></a>
@@ -89,7 +89,7 @@
     </div>
     <br>
     <div class="container2">
-      <!-- <div class="row animated bounceInRight delay-2s"> -->
+      <div class="row animated bounceInRight delay-2s">
         <div class="col-sm">
           <a href="../Project-1-/index.html"><img src="./image/GitGrub.gif" height="220px" class="img1"
               width="300px"></a>
@@ -114,8 +114,8 @@
   <div id="footer">  Copyright &#169;<a href="https://github.com/IsmaelRvra130"
     class="fab fa-github animated bounceInDown delay-2s "></i><br></a><a
     href="https://twitter.com/RocketIsmael13"
-    class="fab fa-twitter animated slideInUp delay-5s"></i><br></a><a
-    href="https://dashboard.heroku.com/apps" class="icons8-heroku animated rotateIn delay-5s"></a>
+    class="fab fa-twitter animated bounceInDown delay-4s"></i><br></a><a
+    href="https://dashboard.heroku.com/apps" class="icons8-heroku animated rotateIn delay-4s"></a>
     <a href="https://www.linkedin.com/in/ismael-rivera-46987018a/"  class="fab fa-linkedin"></i></a>
     <div class="push"></div>
   </div>
